@@ -1,5 +1,10 @@
 $Id$
 
+2009-09-09 David Heremans <david.heremans@gnu-linux.net>
+	* First steps towards MainMemoryViewer with Compass like
+	  'Linked-to-register' functionality. For now at least 
+	  one can enter the address for the memory viewer as hex value.
+
 2008-05-06 Edwin Velds <e.velds@gmail.com>
 	* Added disassemble restart at PC.
 
